apply POM